--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,12 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.3</version>
+        </dependency>
+
 
     </dependencies>
 
@@ -42,10 +48,11 @@
                     <name>listener</name>
                     <value>com.mycompany.MyResultListener,com.mycompany.MyResultListener2</value>
                 </property>
+                    <activation>
+                        <activeByDefault>true</activeByDefault>
+                    </activation>
                 </properties>
-                <activation>
-                    <activeByDefault>true</activeByDefault>
-                </activation>
+
             </configuration>
         </plugin>
     </plugins>
